# parallelImageCLSobelBundle

./: CMakeLists.txt
Ex9Compare2CmkVs14OK/: CMakeLists.txt  ex9.cpp
Ex9CompareCmkVs14OK/: CMakeLists.txt  Device.cl
RGBA_RGBA_copy/: CMakeLists.txt  Device.cl
SobelGreyCmkVs14OK/: CMakeLists.txt  Device.cl  ex9.cpp
SobelRGB3dimCmkVs14Half/: CMakeLists.txt  Device.cl  ex9.cpp
SobelRGBA_A_2dimCmkVs14OK/: CMakeLists.txt  Device.cl  ex9.cpp
SobelRGBA_RGBA_2dimCmkVs14/: CMakeLists.txt  Device.cl  ex9.cpp
SobelRGB_A_2dimCmkVs14OK/: CMakeLists.txt  Device.cl  ex9.cpp
SobelRGB_RGB_2dimCmkVs14Half/: CMakeLists.txt  Device.cl  ex9.cpp
SobelSolidSqureCmkVs14OK/: CMakeLists.txt
